removes scrolling issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,14 @@
 
 /* General styles */
 
-body {
+* {
+  box-sizing: border-box;
+}
+
+html, body {
     font-family: "Segoe UI", sans-serif !important;
+    touch-action: pan-y;
+    overflow-x: hidden;
   }
   
   ul {
@@ -306,7 +312,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
   }
   
@@ -883,7 +889,7 @@ p.holder {
   animation: none !important;
   opacity: 1 !important;
   transform: none !important;
-}
+ }
 
 }
 
